[package]
name = "trie-bench"
description = "Standard benchmarking suite for tries"
version = "0.29.0"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
repository = "https://github.com/axia-tech/trie/"
license = "Apache-2.0"
edition = "2018"

[dependencies]
keccak-hasher = { path = "../keccak-hasher", version = "0.15.2" }
trie-standardmap = { path = "../trie-standardmap", version = "0.15.2" }
hash-db = { path = "../../hash-db" , version = "0.15.2"}
memory-db = { path = "../../memory-db", version = "0.28.0" }
trie-root = { path = "../../trie-root", version = "0.17.0" }
trie-db = { path = "../../trie-db", version = "0.23.0" }
criterion = "0.3.3"
axia-scale-codec = { git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", version = "2.3.1" }

